egit hader adaptive scc

--- a/Compiled/lean.html
+++ b/Compiled/lean.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <header class="heder-section">
-      <div class="top-block-contact"><a href="https://gubinvs.ru"> <img src="../img/supply-page/logogvs_1280.png" alt="Логотип"></a><a class="phone_top" href="tel:+79119215971">+7 (812) 921-59-71</a></div>
+      <div class="container">
+        <div class="top-block-contact"><a href="https://gubinvs.ru"> <img src="../img/supply-page/logogvs_1280.png" alt="Логотип"></a><a class="phone_top" href="tel:+79119215971">+7 (812) 921-59-71</a></div>
+      </div>
     </header>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Внедрение идеологии бережливого производства</h1>
