edit adaptive main-supply section

--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -10,13 +10,16 @@
     <title>Агентство закупочных процедур</title>
   </head>
   <body>
-    <header class="heder-section">
-      <div class="container">
-        <div class="top-block-contact"><a href="https://gubinvs.ru"> <img src="../img/supply-page/logogvs_1280.png" alt="Логотип"></a><a class="phone_top" href="tel:+79119215971">+7 (812) 921-59-71</a></div>
-      </div>
-    </header>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Аутсорсинг снабжения и закупочных процедур</h1>
+      <section class="supply-main-section">
+        <div class="supply-main-section__main-img">
+          <div class="container">
+            <h2 class="supply-main-section__title">Снабжение</h2>
+            <div class="supply-main-section__discription">агентство закупочных процедур</div>
+          </div>
+        </div>
+      </section>
       <script src="js/app.js"></script>
     </main>
   </body>
