edit autsorsing blog adaptive

--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -20,6 +20,35 @@
           </div>
         </div>
       </section>
+      <section class="supply-outsourcing-section">
+        <div class="supply-title-block_mobile"> 
+          <div class="supply-title-block__border_mobile"> </div>
+          <h2 class="supply-title-block__text_mobile">Аутсорсинг задач снабжения</h2>
+        </div>
+        <div class="container supply-outsourcing-container">
+          <div class="block-content">
+            <div class="supply-title-block"> 
+              <div class="supply-title-block__border"></div>
+              <h2 class="supply-title-block__text">Аутсорсинг задач снабжения</h2>
+            </div>
+            <div class="supply-outsourcing__discr">
+              Передача операций закупок и снабжения на аутсорсинг, позволяет сосредоточиться на рабочих процессах, а также поможет сократить расходы до 30%.</div>
+            <div class="supply-outsourcing__discr outsourcing-discr__list">
+              <div class="outsourcing-discr__item">Компания экономит на фонде оплаты труда </div>
+              <div class="outsourcing-discr__item">Страхует себя от завышенных цен, исключая возможный сговор штатных сотрудников и недобросовестных поставщиков</div>
+              <div class="outsourcing-discr__item">Позволяет экономить на специализированных программах учета и системах аналитики.</div>
+            </div>
+            <div class="supply-outsourcing__discr">
+              Компания получает отлаженный, прозрачный процесс закупок, оптимизированную транспортную и складскую логистику, проверенную систему учета и аналитики.</div>
+          </div>
+          <div class="supply-img-block">
+            <div class="img-block">
+              <div class="fon-block"></div>
+              <div class="min-img-block"></div>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="js/app.js"></script>
     </main>
   </body>
