--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -49,6 +49,34 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="supply-blocktop-img">
+          <picture>
+            <source srcset="../img/supply-page/section-img_big-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__big-img" src="../img/supply-page/section-img_big-img_1280.jpg" alt="Просторный склад с аккрутно напоненными стеллажами и поддонами с мешками на полу. Все очень чисто и аккуратно штабелировано">
+          </picture>
+          <picture>
+            <source srcset="../img/supply-page/section-img_mini-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__mini-img" src="../img/supply-page/section-img_mini-img_1280.jpg" alt="Все тот же аккуратный склад но с детальным приближением одной из ячеек на которой аккуратно уложены коробки">
+          </picture>
+        </div>
+        <div class="container">
+          <div class="supply-task-section">
+            <div class="supply-title-block supply-title-block_task">
+              <div class="supply-title-block__border supply-title-block__border_task"></div>
+              <h2 class="supply-title-block__text supply-title-block__text_task">Вы ставите задачу - мы ее решаем!</h2>
+            </div>
+            <div class="background-block">
+              <div class="background-block__content">
+                Берем на себя обязанность по обеспечению потребности в материалах и комплектующих, анализируем цены на рынке, формируем и отправляем заявки на закупку поставщикам.</div>
+              <div class="background-block__content">
+                Ведем складской учет, отслеживая процесс и сроки поставок комплектующих.  Формируем первичные документы, инвентаризации, оприходования, перемещения по ячейкам и складам.</div>
+              <div class="background-block__content">
+                Ведем учет передачи комплектующих и материалов в производство, оформляем заказы на производство, фиксируем факт выпуска готовой продукции, списание 
+                используемых комплектующих, расчет себестоимости.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="js/app.js"></script>
     </main>
   </body>
