--- a/Compiled/doctypes.html
+++ b/Compiled/doctypes.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="css/style.css"><!-- . -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical"><!-- . -->
     <title></title>
   </head>
   <body>
