--- a/Compiled/messageok.html
+++ b/Compiled/messageok.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Уведомление об удачном отправлении сообщении с сайта">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="css/style.css"><!-- . -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href=""><!-- . -->
     <title>Ваше сообщение удачно отправлено</title>
   </head>
   <body>
