--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -24,7 +24,10 @@
           <input type="hidden" name="act" value="order">
         </form>
         <div class="request-section__img-block">
-          <div class="img-block request-section__img-block">
+          <div class="img-block">
+            <picture>
+              <source srcset="../../img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="../../img/supply-page/request-section__img_1024.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
+            </picture>
             <div class="fon-block request-section__fon-block"></div>
           </div>
         </div>
