--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -13,6 +13,98 @@
   <body>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Аутсорсинг снабжения и закупочных процедур</h1>
+      <section class="supply-main-section">
+        <div class="supply-main-section__main-img">
+          <div class="container">
+            <h2 class="supply-main-section__title">Снабжение</h2>
+            <div class="supply-main-section__discription">агентство закупочных процедур</div>
+          </div>
+        </div>
+      </section>
+      <section class="supply-outsourcing-section">
+        <div class="supply-title-block_mobile"> 
+          <div class="supply-title-block__border_mobile"> </div>
+          <h2 class="supply-title-block__text_mobile">Аутсорсинг задач снабжения</h2>
+        </div>
+        <div class="container supply-outsourcing-container">
+          <div class="block-content">
+            <div class="supply-title-block"> 
+              <div class="supply-title-block__border"></div>
+              <h2 class="supply-title-block__text">Аутсорсинг задач снабжения</h2>
+            </div>
+            <div class="supply-outsourcing__discr">
+              Передача операций закупок и снабжения на аутсорсинг, позволяет сосредоточиться на рабочих процессах, а также поможет сократить расходы до 30%.</div>
+            <div class="supply-outsourcing__discr outsourcing-discr__list">
+              <div class="outsourcing-discr__item">Компания экономит на фонде оплаты труда </div>
+              <div class="outsourcing-discr__item">Страхует себя от завышенных цен, исключая возможный сговор штатных сотрудников и недобросовестных поставщиков</div>
+              <div class="outsourcing-discr__item">Позволяет экономить на специализированных программах учета и системах аналитики.</div>
+            </div>
+            <div class="supply-outsourcing__discr">
+              Компания получает отлаженный, прозрачный процесс закупок, оптимизированную транспортную и складскую логистику, проверенную систему учета и аналитики.</div>
+          </div>
+          <div class="supply-img-block">
+            <div class="img-block">
+              <div class="fon-block"></div>
+              <div class="min-img-block"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="supply-blocktop-img">
+          <picture>
+            <source srcset="../img/supply-page/section-img_big-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__big-img" src="../img/supply-page/section-img_big-img_1280.jpg" alt="Просторный склад с аккрутно напоненными стеллажами и поддонами с мешками на полу. Все очень чисто и аккуратно штабелировано">
+          </picture>
+          <picture>
+            <source srcset="../img/supply-page/section-img_mini-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__mini-img" src="../img/supply-page/section-img_mini-img_1280.jpg" alt="Все тот же аккуратный склад но с детальным приближением одной из ячеек на которой аккуратно уложены коробки">
+          </picture>
+        </div>
+        <div class="container">
+          <div class="supply-task-section">
+            <div class="supply-title-block supply-title-block_task">
+              <div class="supply-title-block__border supply-title-block__border_task"></div>
+              <h2 class="supply-title-block__text supply-title-block__text_task">Вы ставите задачу - мы ее решаем!</h2>
+            </div>
+            <div class="background-block">
+              <div class="background-block__content">
+                Берем на себя обязанность по обеспечению потребности в материалах и комплектующих, анализируем цены на рынке, формируем и отправляем заявки на закупку поставщикам.</div>
+              <div class="background-block__content">
+                Ведем складской учет, отслеживая процесс и сроки поставок комплектующих.  Формируем первичные документы, инвентаризации, оприходования, перемещения по ячейкам и складам.</div>
+              <div class="background-block__content">
+                Ведем учет передачи комплектующих и материалов в производство, оформляем заказы на производство, фиксируем факт выпуска готовой продукции, списание 
+                используемых комплектующих, расчет себестоимости.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="supply-accounting-section">
+        <div class="container supply-accounting-section__container">
+          <div class="supply-accounting-section__block-img"> 
+            <div class="sas-block-img__border"></div>
+            <picture>
+              <source srcset="../img/supply-page/iMac_1280.png" media="(max-width: 1280px)"><img class="sas-block-img__img" src="../img/supply-page/iMac.png" alt="Компьютер с программой 1с на мониторе">
+            </picture>
+          </div>
+          <div class="supply-accounting-section__block-content">
+            <div class="supply-title-block supply-title-block__accounting-section put-none">
+              <div class="supply-title-block__border supply-accounting-section__title-border put-none"></div>
+              <h2 class="supply-title-block__text supply-title-block__text_accounting-section put-none">Мы ведем учет <br> в 1С УНФ</h2>
+            </div>
+            <div class="block-content">
+              <div class="supply-outsourcing__discr">Все операции закупочных процедур, такие как:</div>
+              <div class="supply-outsourcing__discr outsourcing-discr__list">
+                <div class="outsourcing-discr__item">Учет номенклатуры в 1C</div>
+                <div class="outsourcing-discr__item">Заказы поставщикам </div>
+                <div class="outsourcing-discr__item">Оприходование на склад, перемещение в производство</div>
+                <div class="outsourcing-discr__item">Оформление операций - выпуск готовой продукции</div>
+                <div class="outsourcing-discr__item accounting-discr__item">Расчет фактической себестоимости готовой продукции</div>
+              </div>
+              <div class="supply-outsourcing__discr supply-outsourcing__discr_accounting-section">Все это наша забота!</div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="supply-question-section">
         <div class="container supply-question-section__container">
           <div class="supply-title-block supply-title-block__question-section put-none">
