--- a/Compiled/lean.html
+++ b/Compiled/lean.html
@@ -55,9 +55,8 @@
         <div class="footer-section__right-block"> 
           <div class="footer-contact-list"> 
             <div class="footer-contact__title">Контакты:</div>
-            <div class="footer-contact__item">Тел: +7 (812) 921-59-71 СПб</div>
-            <div class="footer-contact__item">Тел: +7 (342) 204-00-43 Пермь</div>
-            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/gubinvs"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a><a class="social-block-list__icon" href="https://www.instagram.com/gubinvs/"> <img src="../../img/supply-page/icons_instagram.svg" alt="Иконка инстаграмм"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
+            <div class="footer-contact__item">Тел: +7 (812) 921-59-71</div>
+            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
               <div class="pp-page">Политика в отношении<br> обработки персональных данных</div></a>
           </div>
         </div>
