--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -13,188 +13,28 @@
   <body>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Аутсорсинг снабжения и закупочных процедур</h1>
-      <section class="supply-main-section">
-        <div class="supply-main-section__main-img">
-          <div class="container">
-            <h2 class="supply-main-section__title">Снабжение</h2>
-            <div class="supply-main-section__discription">агентство закупочных процедур</div>
-          </div>
-        </div>
-      </section>
-      <section class="supply-outsourcing-section">
-        <div class="supply-title-block_mobile"> 
-          <div class="supply-title-block__border_mobile"> </div>
-          <h2 class="supply-title-block__text_mobile">Аутсорсинг задач снабжения</h2>
-        </div>
-        <div class="container supply-outsourcing-container">
-          <div class="block-content">
-            <div class="supply-title-block"> 
-              <div class="supply-title-block__border"></div>
-              <h2 class="supply-title-block__text">Аутсорсинг задач снабжения</h2>
-            </div>
-            <div class="supply-outsourcing__discr">
-              Передача операций закупок и снабжения на аутсорсинг, позволяет сосредоточиться на рабочих процессах, а также поможет сократить расходы до 30%.</div>
-            <div class="supply-outsourcing__discr outsourcing-discr__list">
-              <div class="outsourcing-discr__item">Компания экономит на фонде оплаты труда </div>
-              <div class="outsourcing-discr__item">Страхует себя от завышенных цен, исключая возможный сговор штатных сотрудников и недобросовестных поставщиков</div>
-              <div class="outsourcing-discr__item">Позволяет экономить на специализированных программах учета и системах аналитики.</div>
-            </div>
-            <div class="supply-outsourcing__discr">
-              Компания получает отлаженный, прозрачный процесс закупок, оптимизированную транспортную и складскую логистику, проверенную систему учета и аналитики.</div>
-          </div>
-          <div class="supply-img-block">
-            <div class="img-block">
-              <div class="fon-block"></div>
-              <div class="min-img-block"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="supply-blocktop-img">
-          <picture>
-            <source srcset="../img/supply-page/section-img_big-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__big-img" src="../img/supply-page/section-img_big-img_1280.jpg" alt="Просторный склад с аккрутно напоненными стеллажами и поддонами с мешками на полу. Все очень чисто и аккуратно штабелировано">
-          </picture>
-          <picture>
-            <source srcset="../img/supply-page/section-img_mini-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__mini-img" src="../img/supply-page/section-img_mini-img_1280.jpg" alt="Все тот же аккуратный склад но с детальным приближением одной из ячеек на которой аккуратно уложены коробки">
-          </picture>
-        </div>
-        <div class="container">
-          <div class="supply-task-section">
-            <div class="supply-title-block supply-title-block_task">
-              <div class="supply-title-block__border supply-title-block__border_task"></div>
-              <h2 class="supply-title-block__text supply-title-block__text_task">Вы ставите задачу - мы ее решаем!</h2>
-            </div>
-            <div class="background-block">
-              <div class="background-block__content">
-                Берем на себя обязанность по обеспечению потребности в материалах и комплектующих, анализируем цены на рынке, формируем и отправляем заявки на закупку поставщикам.</div>
-              <div class="background-block__content">
-                Ведем складской учет, отслеживая процесс и сроки поставок комплектующих.  Формируем первичные документы, инвентаризации, оприходования, перемещения по ячейкам и складам.</div>
-              <div class="background-block__content">
-                Ведем учет передачи комплектующих и материалов в производство, оформляем заказы на производство, фиксируем факт выпуска готовой продукции, списание 
-                используемых комплектующих, расчет себестоимости.
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="supply-accounting-section">
-        <div class="container supply-accounting-section__container">
-          <div class="supply-accounting-section__block-img"> 
-            <div class="sas-block-img__border"></div>
-            <picture>
-              <source srcset="../img/supply-page/iMac_1280.png" media="(max-width: 1280px)"><img class="sas-block-img__img" src="../img/supply-page/iMac.png" alt="Компьютер с программой 1с на мониторе">
-            </picture>
-          </div>
-          <div class="supply-accounting-section__block-content">
-            <div class="supply-title-block supply-title-block__accounting-section put-none">
-              <div class="supply-title-block__border supply-accounting-section__title-border put-none"></div>
-              <h2 class="supply-title-block__text supply-title-block__text_accounting-section put-none">Мы ведем учет <br> в 1С УНФ</h2>
-            </div>
-            <div class="block-content">
-              <div class="supply-outsourcing__discr">Все операции закупочных процедур, такие как:</div>
-              <div class="supply-outsourcing__discr outsourcing-discr__list">
-                <div class="outsourcing-discr__item">Учет номенклатуры в 1C</div>
-                <div class="outsourcing-discr__item">Заказы поставщикам </div>
-                <div class="outsourcing-discr__item">Оприходование на склад, перемещение в производство</div>
-                <div class="outsourcing-discr__item">Оформление операций - выпуск готовой продукции</div>
-                <div class="outsourcing-discr__item accounting-discr__item">Расчет фактической себестоимости готовой продукции</div>
-              </div>
-              <div class="supply-outsourcing__discr supply-outsourcing__discr_accounting-section">Все это наша забота!</div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="supply-question-section">
-        <div class="container supply-question-section__container">
-          <div class="supply-title-block supply-title-block__question-section put-none">
-            <div class="supply-title-block__border supply-title-block__border_question-section put-none"></div>
-            <h2 class="supply-title-block__text supply-title-block__text_question-section put-none">Вопрос - ответ</h2>
-          </div>
-          <div class="supply-question-section__content-block"> 
-            <div class="question-list">
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">1</div>
-                <div class="question-list__item_question" id="question1">А сколько это стоит?</div>
-              </div>
-              <div class="question-list__item_answer question1">
-                Стоимость завит от объема оказанных услуг и задач которые ставятся для решения. <br><br> Для примера приведем компанию, которая выполняет работы по сборке щитов управления (НКУ), 
-                на основе утвержденной или разработанной под каждый проект спецификации, в объеме 50 наменований и 4 НКУ в месяц.
-                <br><br> Работы по организации закупки, запросу счетов и контроля их оплаты, отслеживание сроков поставки, учет ТМЦ и комплектующих 
-                на складах, передачу их в производство и формирование операции по выпуску готовой продукции, обойдется всего в 80 000 рублей в месяц.
-              </div>
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">2</div>
-                <div class="question-list__item_question" id="question2">В какой программе ведется учет?</div>
-              </div>
-              <div class="question-list__item_answer question2">
-                Наша команда использует 1С конфигурацию УНФ (управление нашей фирмой). <br><br> Данная конфигурация умеет вести учет ячеистого склада, передачу материалов в производство и формировать выпуск 
-                готовой продукции, с последующим списанием материалов и комплектующих. На основе данных о 
-                стоимости закупок комплектующих формируется информация о себестоимости выпускаемой продукции. 
-                <br><br> Данного функционала достаточно для большинства производственных предприятий, но мы можем обсудить и 
-                индивидуальный подход.
-              </div>
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">3</div>
-                <div class="question-list__item_question" id="question3">Как проходит процесс?</div>
-              </div>
-              <div class="question-list__item_answer question3">
-                На основании утвержденного перечня неснижаемого запаса сырья и материалов мы оформляем заказы поставщикам, контролируем получение счетов, их оплату, организовываем и контролируем 
-                доставку. 
-                <br><br> Если при производстве готовой продукции используются разные комплектующие, то работа 
-                выполняется по предоставленной заказчиком спецификации.
-                <br><br> Мы оформляем заказы поставщикам, компануем их счета, передаем вашей бухгалтерии на оплату, контролируем
-                сроки доставки. Обычно этот процесс учитывается в Битрикс24.
-              </div>
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">4</div>
-                <div class="question-list__item_question" id="question4">Как оптимизировать первичку?</div>
-              </div>
-              <div class="question-list__item_answer question4">
-                Если для вашей компании не важен возврат НДС, а работа с оплатой счетов отнимает драгоценное время,  мы можем предложить комплексный подход, выступая в качестве агента. 
-                <br><br> Все платежи за ТМЦ мы осуществим сами, предоставим копии платежных поручений и счета поставщиков, а расходы 
-                на закупку по итогам отчетного периода перевыставим одним документом, с небольшим агентским 
-                вознаграждением.
-              </div>
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">5</div>
-                <div class="question-list__item_question" id="question5">А бухгалтерское сопровождение?</div>
-              </div>
-              <div class="question-list__item_answer question5">
-                Да, услуги бухгалтерского сопровождения мы тоже оказываем.<br> На основании первичных документов ведем учет, формируем и сдаем отчетность.</div>
-              <div class="question-list__item"> 
-                <div class="question-list__item_number">6</div>
-                <div class="question-list__item_question" id="question6">Что еще предлагаете?</div>
-              </div>
-              <div class="question-list__item_answer question6">
-                Предлагаем систематизацию компаний через внедрение системы менеджмента качества и идеологию бережливого производства. <br><br> Разрабатываем и внедряем регламенты, должностные инструкции, технологические процессы. 
-                Курируем вопросы охраны труда и техники безопасности. 
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container supply-request-section__container">
-          <form class="form-block" action="https://gubinvs.ru/lean/php/request-form.php" method="POST">
-            <h3 class="form-block__title">Остались вопросы или уже готовы к сотрудничеству</h3>
-            <input class="form-block__input" type="text" name="name" placeholder="Ваше имя" required>
-            <input class="form-block__input" type="Email" name="email" placeholder="Ваш e-mail" required>
-            <input class="form-block__input" type="tel" name="tel" placeholder="+7 000 000 00 00" required>
-            <textarea class="form-message__textarea" name="message" cols="15" rows="3" placeholder="Ваше сообщение ..." required></textarea>
-            <button class="footer__button" type="submit">Отправить сообщение</button>
+    </main>
+    <footer class="supply-footer"> 
+      <div class="container supply-footer__continer">
+        <div class="footer-section__left-block"> 
+          <h3 class="form-tel-title">Закажите звонок:</h3>
+          <form class="form-tel-footer" action="https://gubinvs.ru/lean/php/call-back.php" method="POST"> 
+            <input class="form-tel-footer__input" type="tel" name="tel" placeholder="+7 922 222 00 00">
+            <button class="form-tel-footer__botton" type="submit"> </button>
             <input type="hidden" name="act" value="order">
           </form>
-          <div class="request-section__img-block">
-            <div class="request-section__img-block_border"></div>
-            <picture>
-              <source srcset="../../img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="../../img/supply-page/request-section__img.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
-            </picture>
-            <div class="request-section__img-block_border"></div>
+          <div class="form-tel-text">Мы перезвоним Вам и обсудим все интересующие вопросы </div>
+        </div>
+        <div class="footer-section__right-block"> 
+          <div class="footer-contact-list"> 
+            <div class="footer-contact__title">Контакты:</div>
+            <div class="footer-contact__item">Тел: +7 (812) 921-59-71</div>
+            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
+              <div class="pp-page">Политика в отношении<br> обработки персональных данных</div></a>
           </div>
         </div>
-      </section>
-      <script src="js/app.js"></script>
-    </main>
+      </div>
+    </footer>
+    <script src="js/app.js"></script>
   </body>
 </html>
