--- a/Compiled/lean.html
+++ b/Compiled/lean.html
@@ -12,8 +12,18 @@
   </head>
   <body>
     <header class="heder-section">
-      <div class="container">
-        <div class="top-block-contact"><a href="https://gubinvs.ru"> <img src="../img/supply-page/logogvs_1280.png" alt="Логотип"></a><a class="phone_top" href="tel:+79119215971">+7 (812) 921-59-71</a></div>
+      <div class="container heder-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/supply-page/logogvs_1280.png" alt="Логотип">
+          <div class="logo-border"></div>
+          <div class="logo-title">Менеджмент</div></a>
+        <nav class="nav-header-list"> 
+          <div class="nav-header-list__item">СМК</div>
+          <div class="nav-header-list__item">СУОТ</div>
+          <div class="nav-header-list__item">СУСиЗ</div>
+        </nav>
+        <div class="burger-room-block">
+          <div class="burger"><span></span></div>
+          <div class="room-butom">Личный кабинет</div>
+        </div>
       </div>
     </header>
     <main>
