--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -11,6 +11,21 @@
     <title>Агентство закупочных процедур</title>
   </head>
   <body>
+    <header class="heder-section">
+      <div class="container heder-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/supply-page/logogvs_1280.png" alt="Логотип">
+          <div class="logo-border"></div>
+          <div class="logo-title">Менеджмент</div></a>
+        <nav class="nav-header-list"> 
+          <div class="nav-header-list__item">СМК</div>
+          <div class="nav-header-list__item">СУОТ</div>
+          <div class="nav-header-list__item">СУСиЗ</div>
+        </nav>
+        <div class="burger-room-block">
+          <div class="burger"><span></span></div>
+          <div class="room-butom">Личный кабинет</div>
+        </div>
+      </div>
+    </header>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Аутсорсинг снабжения и закупочных процедур</h1>
       <section class="supply-main-section">
