--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -25,11 +25,11 @@
           <div class="room-butom">Личный кабинет</div>
         </div>
       </div>
-      <div class="container">
-        <div class="nav-block-active"> 
-          <div class="nav-header-list__item">Система менеджмента качества</div>
-          <div class="nav-header-list__item">Система управления охраной труда</div>
-          <div class="nav-header-list__item">Система управления снабжением и закупками</div>
+      <div class="container nav-header-list__active">
+        <div class="nav-block-active">
+          <div class="nav-header-list__item nav-header-list__item_active">Система менеджмента качества</div>
+          <div class="nav-header-list__item nav-header-list__item_active">Система управления охраной труда</div>
+          <div class="nav-header-list__item nav-header-list__item_active">Система управления снабжением и закупками</div>
         </div>
       </div>
     </header>
