--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="container nav-header-list__active">
-        <div class="nav-block-active">
+        <div class="nav-block-active none-block">
           <div class="nav-header-list__item nav-header-list__item_active">Система менеджмента качества</div>
           <div class="nav-header-list__item nav-header-list__item_active">Система управления охраной труда</div>
           <div class="nav-header-list__item nav-header-list__item_active">Система управления снабжением и закупками</div>
