--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -21,7 +21,8 @@
           <div class="nav-header-list__item">СУСиЗ</div>
         </nav>
         <div class="burger-room-block">
-          <div class="burger"><span></span></div>
+          <div class="burger" id="burger"><span></span></div>
+          <div class="burger_close"><span></span></div>
           <div class="room-butom">Личный кабинет</div>
         </div>
       </div>
