--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="burger-room-block">
           <div class="burger" id="burger"><span></span></div>
-          <div class="burger_close"><span></span></div>
+          <div class="burger_close none-block"><span></span></div>
           <div class="room-butom">Личный кабинет</div>
         </div>
       </div>
