--- a/Compiled/lean.html
+++ b/Compiled/lean.html
@@ -15,11 +15,7 @@
       <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/supply-page/logogvs_1280.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
-        <nav class="nav-header-list"> 
-          <div class="nav-header-list__item">СМК</div>
-          <div class="nav-header-list__item">СУОТ</div>
-          <div class="nav-header-list__item">СУСиЗ</div>
-        </nav>
+        <nav class="nav-header-list"> <a class="nav-header-list__item" href="lean.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
         <div class="burger-room-block">
           <div class="burger" id="burger"><span></span></div>
           <div class="burger_close none-block"><span></span></div>
@@ -27,11 +23,10 @@
         </div>
       </div>
       <div class="container nav-header-list__active">
-        <div class="nav-block-active none-block">
-          <div class="nav-header-list__item nav-header-list__item_active">Система менеджмента качества</div>
-          <div class="nav-header-list__item nav-header-list__item_active">Система управления охраной труда</div>
-          <div class="nav-header-list__item nav-header-list__item_active">Система управления снабжением и закупками</div>
-        </div>
+        <div class="nav-block-active none-block"><a class="nav-header-list__item_active" href="lean.html">
+            <div class="nav-header-list__item">Система менеджмента качества</div></a><a class="nav-header-list__item_active" href="labor.html">
+            <div class="nav-header-list__item">Система управления охраной труда</div></a><a class="nav-header-list__item_active" href="supply.html">
+            <div class="nav-header-list__item">Система управления снабжением и закупками</div></a></div>
       </div>
     </header>
     <main>
@@ -81,5 +76,6 @@
       </div>
     </footer>
     <script src="js/app.js"></script>
+    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
