--- a/Compiled/lean.html
+++ b/Compiled/lean.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/supply-page/logogvs_1280.png" alt="Логотип">
+      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
         <nav class="nav-header-list"> <a class="nav-header-list__item" href="lean.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
