--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -15,7 +15,7 @@
       <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
-        <nav class="nav-header-list"> <a class="nav-header-list__item" href="lean.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
+        <nav class="nav-header-list"> <a class="nav-header-list__item" href="index.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
         <div class="burger-room-block">
           <div class="burger" id="burger"><span></span></div>
           <div class="burger_close none-block"><span></span></div>
@@ -31,11 +31,32 @@
     </header>
     <main>
       <h1 class="visually-hidden h1-visually h1__visually" style="visibility: hidden;">Аутсорсинг снабжения и закупочных процедур</h1>
-      <section class="supply-main-section">
-        <div class="supply-main-section__main-img">
-          <div class="container">
-            <h2 class="supply-main-section__title">Снабжение</h2>
-            <div class="supply-main-section__discription">агентство закупочных процедур</div>
+      <section class="labor-main-section"> 
+        <div class="container labor-main-section__container"> 
+          <div class="lms-left-block">
+            <div class="lms-title-block"> 
+              <div class="lms-title-block__title">БЕРЕЖЛИВАЯ КОМПАНИЯ</div>
+              <div class="lms-title-block__discription">системные компании более привлекательны для заказчиков и инвесторов.</div>
+              <button class="lms-title-block__button" onclick="document.location='https://gubinvs.ru/lean/lean.html'">Узнать подробнее ...</button>
+            </div>
+          </div>
+          <div class="lms-right-block"><img class="lms-right-block__img" src="../../img/labor-page/ss-img-gerl.png" alt="Приятная девушка в очках мило улыбается вам">
+            <div class="windows-phone-block">
+              <div class="windows-phone-block__code-sity">+7 (812)</div>
+              <div class="windows-phone-block__numder-list">
+                <div class="windows-phone-block__number-item">9</div>
+                <div class="windows-phone-block__number-item">2</div>
+                <div class="windows-phone-block__number-item">1</div>
+                <div class="windows-phone-block__number-item">5</div>
+                <div class="windows-phone-block__number-item">9</div>
+                <div class="windows-phone-block__number-item">7</div>
+                <div class="windows-phone-block__number-item">1</div>
+              </div>
+            </div>
+            <div class="slogan-block">
+              <div class="slogan-block__line first-line">ПЕРВЫЙ ШАГ</div>
+              <div class="slogan-block__line second-line">К СИСТЕМНОЙ КОМПАНИИ</div>
+            </div>
           </div>
         </div>
       </section>
