--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="container nav-header-list__active">
-        <div class="nav-block-active none-block"><a class="nav-header-list__item_active" href="lean.html">
+        <div class="nav-block-active none-block"><a class="nav-header-list__item_active" href="index.html">
             <div class="nav-header-list__item">Система менеджмента качества</div></a><a class="nav-header-list__item_active" href="labor.html">
             <div class="nav-header-list__item">Система управления охраной труда</div></a><a class="nav-header-list__item_active" href="supply.html">
             <div class="nav-header-list__item">Система управления снабжением и закупками</div></a></div>
@@ -256,6 +256,5 @@
       </div>
     </footer>
     <script src="js/app.js"></script>
-    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
