--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -256,5 +256,6 @@
       </div>
     </footer>
     <script src="js/app.js"></script>
+    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
