--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Берем на себя обязанность по обеспечению потребности в материалах и комплектующих, анализируем цены на рынке, формируем и отправляем заявки на закупку поставщикам. Контролируем сроки поставок и ведем учет движения материалов.">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?_v=20230720143520">
     <link rel="canonical" href=""><!-- . -->
     <title>Агентство закупочных процедур</title>
   </head>
   <body>
     <header class="header-section">
-      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
+      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><picture><source srcset="../img/nav-logo__img.webp" type="image/webp"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип"></picture>
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
         <nav class="nav-header-list"> <a class="nav-header-list__item" href="index.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
@@ -234,7 +234,7 @@
         </div>
       </div>
     </footer>
-    <script src="js/app.js"></script>
-    <script src="js/modules/burger-action.js"></script>
+    <script src="js/app.js?_v=20230720143520"></script>
+    <script src="js/modules/burger-action.js?_v=20230720143520"></script>
   </body>
 </html>
