--- a/Compiled/bid.html
+++ b/Compiled/bid.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Информация отраженная в брифе станет основанем для составления технического задания, которое, в свою очередь, будет сводом правил для разработки будущего сайта">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="css/style.css?_v=20230720143520">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="canonical">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css?_v=20220807133642">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>Бриф на разработку сайта</title>
   </head>
   <body>
