--- a/Compiled/index.html
+++ b/Compiled/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Идеология организации бизнес-процессов, направленная на исключение производственных потерь, которые являются причиной брака и увеличением издержек">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="css/style.css?_v=20230720143520">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="">
     <title>Внедрение идеологии бережливого производства, систематизация и стандартизация бизнес-процессов</title>
   </head>
